<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/get_to_know_you">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".GetToKnowActivity">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="164dp"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/nova_mono"
            android:onClick="yourQualities"
            android:id="@+id/button"
            android:text="@string/next"
            android:textSize="@dimen/textSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day"></Button>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="125dp"
            android:layout_height="57dp"
            android:layout_marginStart="@dimen/first_edit_start"
            android:layout_marginTop="@dimen/first_edit_top"
            android:textSize="@dimen/infoTextSize"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView9"></EditText>

        <EditText
            android:id="@+id/lastName"
            android:layout_width="139dp"
            android:layout_height="57dp"
            android:layout_marginStart="@dimen/last_edit_start"
            android:layout_marginTop="@dimen/last_edit_top"
            android:textSize="@dimen/infoTextSize"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView9"></EditText>

        <Spinner
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:entries="@array/monthArray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"></Spinner>


        <Spinner
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:entries="@array/dayArray"
            app:layout_constraintStart_toEndOf="@+id/month"
            app:layout_constraintTop_toBottomOf="@+id/textView13"></Spinner>

        <Spinner
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/yearArray"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@+id/day"
            app:layout_constraintTop_toBottomOf="@+id/textView13"></Spinner>

      <!--  <Spinner
            android:id="@+id/spinner2"
            android:layout_width="237dp"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/marginTop"
            android:entries="@array/horoscope_arrays"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/day" />
            -->

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/get_to_know_you_start"
            android:layout_marginTop="@dimen/get_to_know_you_top"
            android:fontFamily="@font/doppio_one"
            android:text="@string/get_to_know_you"
            android:textSize="29dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- <CalendarView
            android:id="@+id/calendarView"
            android:theme="@style/CalenderViewCustom"
            android:layout_width="307dp"
            android:layout_height="308dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="84dp"
            android:maxDate="22dp"
            android:minDate="12-12-2018"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

        </CalendarView>
        -->

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/name_start"
            android:layout_marginTop="@dimen/name_top"
            android:fontFamily="@font/nova_mono"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/first_start"
            android:layout_marginTop="@dimen/first_top"
            android:text="@string/first"
            android:textSize="@dimen/infoTextSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/last_start"
            android:layout_marginTop="@dimen/last_top"
            android:text="@string/last"
            android:textSize="@dimen/infoTextSize"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/name_start"
            android:layout_marginTop="@dimen/name_top"
            android:fontFamily="@font/nova_mono"
            android:text="@string/bday"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <!--    <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/name_start"
            android:layout_marginTop="@dimen/marginTop"
            android:fontFamily="@font/nova_mono"
            android:text="@string/horoscope"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/month" />


        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nova_mono"
            android:text="@string/horo_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>